Improve error handling in test class initialisation